--- a/src/app/modules/orders/components/counter-sale/counter-sale.component.html
+++ b/src/app/modules/orders/components/counter-sale/counter-sale.component.html
@@ -135,7 +135,7 @@
           </div>
           <div
             class="col-md-4"
-            *ngIf="selectedProduct.schemes.length"
+            *ngIf="selectedProduct?.schemes?.length"
             style="padding-top: 2px"
           >
             Trade Offer:
