edit order working

--- a/src/app/modules/primary-orders/components/edit-order/edit-order.component.html
+++ b/src/app/modules/primary-orders/components/edit-order/edit-order.component.html
@@ -479,7 +479,7 @@
                         </td>
                         <!-- Dist.Disc% -->
                         <td>
-                          {{ item.distributorDiscount | number: "1.2-2" }}
+                          {{ item.distributor_discount | number: "1.2-2" }}
                         </td>
                         <!-- Spec.Disc% -->
                         <td>{{ item.specialDiscount }}</td>
