order detail is done

--- a/src/app/modules/primary-orders/components/edit-order/edit-order.component.html
+++ b/src/app/modules/primary-orders/components/edit-order/edit-order.component.html
@@ -510,7 +510,7 @@
                           {{ item.distributor_discount | number: "1.2-2" }}
                         </td>
                         <!-- Spec.Disc% -->
-                        <td>{{ item.specialDiscount }}</td>
+                        <td>{{ item.specialDiscount | number: "1.2-2" }}</td>
                         <!-- E.Disc.Amt -->
                         <td>
                           <input
